# sos

./: .gitignore  CMakeLists.txt  LICENSE  MonsterNameList.txt  Node.h  Path.h  Player.cpp  Player.h  README.md  outline.md  sos_demo.cpp  sos_list.cpp  sos_list.h  sos_player.cpp  sos_player.h  textuml.md
slidedecks/: intro.html
src/: AntiPatternMonster.h  Combat.cpp  Combat.h  Day.cpp  Day.h  Dungeon.cpp  Dungeon.h  Entity.cpp  Entity.h  GenCodeMonster.h  Item.cpp  Item.h  Monster.cpp  Monster.h  MonsterNameList.txt  Node.cpp  Node.h  Path.cpp  Player.cpp  Player.h  Skill.cpp  Skill.h  SkillFactory.h  SkillHack.h  Usable.cpp  Usable.h  Utilities.cpp  Utilities.h  main.cpp
src/items/: ItemCoffee.cpp  ItemCoffee.h  ItemTextbook.cpp  ItemTextbook.h
src/monsters/: AntiPatternMonster.h  GenCodeMonster.h
src/skills/: SkillDebugger.cpp  SkillDebugger.h  SkillHack.cpp  SkillHack.h  SkillOfficeHours.cpp  SkillOfficeHours.h  SkillPenPlan.cpp  SkillPenPlan.h  Skill_README.md
